--- a/example/index.html
+++ b/example/index.html
@@ -17,36 +17,12 @@
     }
 
     .example {
-      clear: both;
+      margin-bottom: 16px;
     }
     .example-chart {
-      float: left;
-      margin-right: 20px;
-    }
-    .example-code {
-      float: left;
+      margin-top: 10px;
     }
   </style>
-</head>
-<body>
-  <div class="container">
-    <h1>d3.chart.csnw.configurable Examples</h1>
-
-    <section class="example clearfix">
-      <h2>Line-Bar</h2>
-      <div class="example-chart" id="chart-1"></div>
-    </section>
-    
-    <section class="example clearfix">
-      <h2>Lines</h2>
-      <div class="example-chart" id="chart-2"></div>
-    </section>
-
-    <section class="example clearfix">
-      <h2>Bars</h2>
-      <div class="example-chart" id="chart-3"></div>
-    </section>
-  </div>
 
   <script src="../bower_components/d3/d3.js"></script>
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
@@ -60,119 +36,126 @@
   <script src="../src/configurable.js"></script>
 
   <script src="js/data.js"></script>
-  <script src="js/highlight.pack.js"></script>
-  <script type="text/javascript">
-    hljs.initHighlightingOnLoad();
+</head>
+<body>
+  <div class="container">
+    <h1>d3.chart.csnw.configurable Examples</h1>
 
-    var config = {
-      /**
-        Chart 1: Line-Bar
-      */
-      'chart-1': {
-        id: '#chart-1',
-        chart: {
-          type: 'Values',
-          charts: [
-            {
-              type: 'Bars', 
-              dataKey: 'results', 
-              labels: {
-                offset: 8,
-                position: 'top|bottom',
-                style: {
-                  'font-size': '14px'
-                },
-                format: d3.format(',0d')
+    <section class="example">
+      <h2>Line-Bar</h2>
+      <svg id="chart-1"></svg>
+
+      <script type="text/javascript">
+        var chart = d3.select('#chart-1')
+          .chart('Configurable', {
+            type: 'Values',
+            charts: [
+              {
+                type: 'Bars', 
+                dataKey: 'results', 
+                labels: {
+                  offset: 8,
+                  position: 'top|bottom',
+                  style: {
+                    'font-size': '14px'
+                  },
+                  format: d3.format(',0d')
+                }
+              },
+              {
+                type: 'Line',
+                dataKey: 'input',
+                labels: {
+                  position: 'top'
+                }
+              }
+            ],
+            axes: {
+              x: {
+                title: 'X Title'
+              },
+              y: {
+                scale: {domain: [0, 20000]}, 
+                title: 'Y1 Title'
+              },
+              secondaryY: {
+                dataKey: 'input', 
+                scale: {domain: [0, 90]}, 
+                title: 'Y2 Title'
               }
             },
-            {
-              type: 'Line',
-              dataKey: 'input',
-              labels: {
-                position: 'top'
-              }
-            }
-          ],
-          axes: {
-            x: {
-              title: 'X Title'
+            legend: {
+              type: 'Inset',
+              position: {x: 10, y: 0}
             },
-            y: {
-              scale: {domain: [0, 20000]}, 
-              title: 'Y1 Title'
-            },
-            secondaryY: {
-              dataKey: 'input', 
-              scale: {domain: [0, 90]}, 
-              title: 'Y2 Title'
-            }
-          },
-          legend: {
-            type: 'Inset',
-            position: {x: 10, y: 0}
-          },
-          title: 'Chart Title'
-        }
-      },
+            title: 'Chart Title'
+          })
+          .width(600)
+          .height(400)
+          .chartMargins({top: 10, right: 10, bottom: 10, left: 10});
 
-      /**
-        Chart 2: Lines
-      */
-      'chart-2': {
-        id: '#chart-2',
-        chart: {
-          type: 'XY',
-          charts: [
-            {type: 'Line', dataKey: 'lines', showLabels: false},
-            {type: 'Labels', dataKey: 'labels', offset: 5}
-          ],
-          axes: {
-            x: {scale: {domain: [2000, 2020]}, title: 'Year', tickFormat: d3.format('####')},
-            y: {title: 'Results'}
-          },
-          legend: {
-            display: 'right',
-            dataKey: 'lines'
-          },
-          title: 'Results by Year'
-        }
-      },
-
-      /**
-        Chart 3: Bars
-      */
-      'chart-3': {
-        id: '#chart-3',
-        chart: {
-          type: 'Values',
-          charts: [
-            {
-              type: 'Bars', 
-              dataKey: 'bars', 
-              labels: {format: d3.format(',0d')}
-            }
-          ],
-          axes: {
-            x: false,
-            y: {title: 'Results', scale: {domain: [0, 35000]}}
-          },
-          title: 'Results'
-        }
-      }
-    };
+        chart.draw(data['chart-1']);
+      </script>
+    </section>
     
-    // Add charts by configuration
-    var charts = {}
-    _.each(config, function(options, id) {
-      var chart = charts[id] = d3.select(options.id)
-        .append('svg')
-        .chart('Configurable', options.chart)
-        .width(600)
-        .height(400)
-        .chartMargins({top: 10, right: 10, bottom: 10, left: 10});
+    <section class="example">
+      <h2>Lines</h2>
+      <svg id="chart-2"></svg>
 
-      chart.draw(data[id]);
-    }, this);
-  </script>
+      <script type="text/javascript">
+        var chart = d3.select('#chart-2')
+          .chart('Configurable', {
+            type: 'XY',
+            charts: [
+              {type: 'Line', dataKey: 'lines', showLabels: false},
+              {type: 'Labels', dataKey: 'labels', offset: 5}
+            ],
+            axes: {
+              x: {scale: {domain: [2000, 2020]}, title: 'Year', tickFormat: d3.format('####')},
+              y: {title: 'Results'}
+            },
+            legend: {
+              display: 'right',
+              dataKey: 'lines'
+            },
+            title: 'Results by Year'
+          })
+          .width(600)
+          .height(400)
+          .chartMargins({top: 10, right: 10, bottom: 10, left: 10});
+
+        chart.draw(data['chart-2']);
+      </script>
+    </section>
+
+    <section class="example">
+      <h2>Bars</h2>
+      <svg id="chart-3"></svg>
+
+      <script type="text/javascript">
+        var chart = d3.select('#chart-3')
+          .chart('Configurable', {
+            type: 'Values',
+            charts: [
+              {
+                type: 'Bars', 
+                dataKey: 'bars', 
+                labels: {format: d3.format(',0d')}
+              }
+            ],
+            axes: {
+              x: false,
+              y: {title: 'Results', scale: {domain: [0, 35000]}}
+            },
+            title: 'Results'
+          })
+          .width(600)
+          .height(400)
+          .chartMargins({top: 10, right: 10, bottom: 10, left: 10});
+
+        chart.draw(data['chart-3']);
+      </script>
+    </section>
+  </div>
 </body>
 </html>
