--- a/example/specs.html
+++ b/example/specs.html
@@ -70,8 +70,12 @@
           },
           data: 'spec-abc',
           run: function(options, chart) {
+            options.chart.title = 'Chart Title (Redrawn)';
+            chart.options(options.chart);
             chart.redraw();
-            $(options.elements.chart).find('.chart-title-main').text('Chart Title (Redrawn)');
+          },
+          reset: function(options) {
+            options.chart.title = 'Chart Title';
           }
         });
       </script>
@@ -136,8 +140,13 @@
           },
           data: 'spec-smooth',
           run: function(options, chart) {
-            // Set to not smooth...
-            $(options.elements.chart).find('.chart-title-main').text('Not Smooth (...)');
+            // TODO Set to not smooth...
+
+            options.chart.title = 'Not Smooth';
+            chart.options(options.chart);
+          },
+          reset: function(options) {
+            options.chart.title = 'Smooth';
           }
         });
       </script>
@@ -159,7 +168,67 @@
             }
           },
           data: 'spec-abc'
-        })
+        });
+      </script>
+    </section>
+
+    <section class="spec">
+      <span>Chart should update when options change</span>
+      <button class="spec-btn" data-run>Run</button>
+      <button class="spec-btn" data-reset>Reset</button>
+
+      <div class="spec-chart" data-chart></div>
+      <script type="text/javascript">
+        spec({
+          chart: {
+            type: 'XY',
+            charts: [
+              {type: 'Line', dataKey: 'values', showLabels: false}
+            ],
+            axes: {
+              x: {ticks: 5},
+            },
+            title: 'Before'
+          },
+          data: 'spec-abc',
+          run: function(options, chart) {
+            options.chart.title = 'After';
+            chart.options(options.chart);
+          },
+          reset: function(options, chart) {
+            options.chart.title = 'Before';
+          }
+        });
+      </script>
+    </section>
+
+    <section class="spec">
+      <span>Chart should update when data-bound options change</span>
+      <button class="spec-btn" data-run>Run</button>
+      <button class="spec-btn" data-reset>Reset</button>
+
+      <div class="spec-chart" data-chart></div>
+      <script type="text/javascript">
+        spec({
+          chart: {
+            type: 'XY',
+            charts: [
+              {type: 'Line', dataKey: 'values', showLabels: false}
+            ],
+            axes: {
+              x: {ticks: 5},
+            },
+            title: {dataKey: 'title'}
+          },
+          data: 'spec-data-bound',
+          run: function(options, chart) {
+            data[options.data].title = 'After (from data)';
+            chart.draw(data[options.data]);
+          },
+          reset: function(options, chart) {
+            data[options.data].title = 'Before (from data)';
+          }
+        });
       </script>
     </section>
 
@@ -262,6 +331,9 @@
             return;
           
           $(options.elements.chart).empty();
+          if (_.isFunction(options.reset))
+            options.reset(options);
+
           create();
           $run.attr('disabled', false);
           $reset.attr('disabled', true);
