Update scales on change

--- a/example/specs.html
+++ b/example/specs.html
@@ -189,7 +189,7 @@
             d3.chart.helpers.property.extend(chart, 'options', {
               title: 'After',
               axes: {
-                x: {ticks: 10}
+                x: {ticks: 10, scale: {domain: [0, 200]}}
               }
             });
           }
