Add margins to components

--- a/example/specs.html
+++ b/example/specs.html
@@ -66,7 +66,7 @@
               x: {title: 'X Axis'},
               y: {title: 'Y Axis'}
             },
-            title: 'Chart Title'
+            title: {title: 'Chart Title', margins: {top: 1.0, bottom: 1.0}}
           },
           data: 'spec-abc',
           run: function(options, chart) {
