Use built src by default and remove dist from commits

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
-  <link rel="stylesheet" type="text/css" href="../src/css/base.css">
+  <link rel="stylesheet" type="text/css" href="../dist/css/d3.chart.csnw.configurable.base.css">
   <style>
     .input .chart-line, .input2 .chart-line {
       stroke-dasharray: 4,4;
@@ -28,12 +28,7 @@
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
 
-  <script src="../src/helpers.js"></script>
-  <script src="../src/extensions.js"></script>
-  <script src="../src/base.js"></script>
-  <script src="../src/charts.js"></script>
-  <script src="../src/components.js"></script>
-  <script src="../src/configurable.js"></script>
+  <script src="../dist/d3.chart.csnw.configurable.js"></script>
 
   <script src="js/data.js"></script>
 </head>
