Stub out resize approach

--- a/example/simple.html
+++ b/example/simple.html
@@ -12,9 +12,11 @@
 
   <link rel="stylesheet" type="text/css" href="../dist/css/d3.chart.csnw.configurable.base.css">
   <style>
-    #chart {
-      width: 600px;
-      height: 400px;
+    @media (min-width: 768px) {
+      #chart {
+        width: 600px;
+        height: 400px;
+      }  
     }
   </style>
 </head>
