Separate charts and components and add stacked bars
- Charts separated to charts folder
- Components separated to components folder
- Component added to base
- Add StackedBars chart

--- a/example/simple.html
+++ b/example/simple.html
@@ -34,7 +34,10 @@
       type: 'Values',
       invertedXY: true,
       charts: {
-        bars: {type: 'Bars', dataKey: 'increasing'}
+        bars: {type: 'StackedBars', dataKey: 'increasing'}
+      },
+      axes: {
+        y: {scale: {domain: [0, 300]}}
       }
     };
     var data = {
