--- a/example/index.html
+++ b/example/index.html
@@ -139,7 +139,7 @@
               }
             ],
             axes: {
-              x: false,
+              // x: false,
               y: {title: 'Results', scale: {domain: [0, 35000]}}
             },
             title: 'Results'
