--- a/example/specs.html
+++ b/example/specs.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>d3.chart.csnw.configurable Example</title>
+  <title>d3.chart.multi Example</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
-  <link rel="stylesheet" type="text/css" href="../src/css/base.css">
+  <link rel="stylesheet" type="text/css" href="../tmp/css/d3.chart.multi.base.css">
   <style>
     .spec {
       margin-bottom: 16px;
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>d3.chart.csnw.configurable Specs</h1>
+    <h1>d3.chart.multi Specs</h1>
 
     <section class="spec">
       <span>Should re-layout correctly on redraw</span>
@@ -272,12 +272,7 @@
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
 
-  <script src="../src/helpers.js"></script>
-  <script src="../src/extensions.js"></script>
-  <script src="../src/base.js"></script>
-  <script src="../src/charts.js"></script>
-  <script src="../src/components.js"></script>
-  <script src="../src/configurable.js"></script>
+  <script src="../tmp/d3.chart.multi.js"></script>
 
   <script src="js/data.js"></script>
   <script type="text/javascript">
@@ -290,7 +285,7 @@
       function create() {
         chart = d3.select(options.elements.chart)
           .append('svg')
-          .chart('Configurable', options.chart);
+          .chart('Multi', options.chart);
 
         if (!options.resizable)
           chart.width(600).height(400);
